# citadels

./: .dockerignore  .ghci  .gitignore  .sosrc  .tasks  CHANGELOG.md  Cargo.toml  Dockerfile  PLAN.md  README.md  TECH-STACK.md  TODO.md  citadels.cabal  deploy.nu  deploy.sh  fly.toml  mprocs.yaml  package-lock.json  package.json  playtest-mprocs.yaml  repl.rs  rust-toolchain.toml  sample.json  sgconfig.yml  tailwind.config.js  tailwind.source.css  upload-assets.js  upload-css.js
.cargo/: config.toml
.sqlx/: query-026cb1dd6c381095675c20e62a723d65f01dbba2cb28e612ab039c0813cc7d51.json  query-03a63dc65640445dc81f7f00a5571429c015d54cb269d6b73fc6af0b4eee869b.json  query-090549faed7fd6f19616cdf0a96b17f0cbd8040376e13199ffb0e3e90c40587e.json  query-0e1c1861111112e1ea9d2065c67e5b2740fcee7140a5d0da1dc8abc56d9f474f.json  query-17adf5a6f24fda2148858613edebb4cbaf8c1f748f15ef71e2c40393703ed5f4.json  query-1d32623ef89fa28eeeab55864f2e7e8b524e4feb9848320e25176d2ea6f45b01.json  query-1ef855f30463a81d822bd105977cfe8ab6f0d1c5ea3f5fa14da7c19b459eaebb.json  query-218bad7091a4b261adb41d74682b70681413dccf1878b1331ccd97637b4cda55.json  query-27704f0237e416f92440619841f77b99986e484167b03a219db11309a555776e.json  query-29a9b8ba08cce5cc1a449424e513f006a47759a096d97099435ba523fa079857.json  query-2f7de7b904b978d4d183b091500fa1f91f6bd098a19d02c28f82415c8e68312d.json  query-325d410bb168972f169852ee0ab3216b2628f615d02d3018c442885667cce552.json  query-33ca075ce810d0c9e26f56af37e6c989d559c54173bb21068b7aa4c9ae655c9a.json  query-403d7318ee1323779250716e489c2ccf7d06769ba50ce69b0259965e6a2192b4.json  query-41fbf499646d76a0321b676d782e11db86ecc17ea763842dd070369fc7594e5d.json  query-507420744e2cd74881bf9d9a3045f75a0b8eec5f74fb171eec73dd7905abb943.json  query-50d716ba65c739c656ee001836021c4939b3753694a28555af340b3f4f5bc3a1.json  query-52c143a390c5e9ba52f03590593f4008e942df0fa1fdfd55199fcd4dcfb6d12e.json  query-5adc85b6b3d81b85e9f29a1668cbbb407e1cf191b829b987de5f92e3922b9968.json  query-5b58b420c002cbacc195cce601c2029f746dbd6e0fe752e8b88247479111ce45.json  query-5e1668ff9d46e66f3d9e03f594c72eb51f42f6eb210f594635105ec9b2f5126c.json  query-5e3ecc6ee2987e52a3c17e30ddbcff5ce41a35c8108075e2a088b2598630ee66.json  query-60985048e57b1a5c255982e881db6426911f7f316a48716d27580a56168f564f.json  query-62afe040d9bcf28cf11d0846c06f630086440c809ecc70f08f4e0c70299f8119.json  query-6483c375edd1d9c9d2b83f938cfc79bb531045e2c54c5b05e96234868bf93c59.json  query-6a30e36d02ff6ec19f5debf25a2f2f78c0d2015a1e99dd6056fdcabc6c8bc40f.json  query-7117da081c490f3dac2238338122e15c5be41855aac90a848998324f0c8819af.json  query-71686306be4aa03ea357092ae8589f9ab2f12c7250b41c9f1b63bbb91d1c6922.json  query-830d533429096a011697a1ec8371fd0d7b7457df9d3450f46a750782ff2657b1.json  query-8940701854fb3ddc825a0a848eee598a680491499e7be16a100306a96aefbb5a.json  query-8dac830d5631ed33c51ad4ec168f1148e4987526e7dacac593df0a3655cf16d3.json  query-92ae0068ce0e05c6fddfdb7af96311fcfdf784d09ffa17c81c1f7b94e3175b0c.json  query-96130439ff59284531b61ba05f707462a7782e29894efd6188db229c7a6b61cb.json  query-989226d5c28e957f3bb8a763f9e7b3d435a130ac9c81b8bd902d184684a12a5c.json  query-a39b50dc8536f3515b3d6ff9ee993d4bacb015301de439fc5b432785659ff7bd.json  query-aa380fc47bd33ab19c134aa5baa02d52be5476fec5427759325877071f2bc57e.json  query-baf4c5f483765d34373cb57af0fefdcb31f2ef3b1696f465071409790f6a4096.json  query-bca5f0d9e6e0d4c98e2e84129f69ede4b1f806da28efdf204326660c82c6eb68.json  query-c3607709a75ecc3f39c87c672b429c19adf2ba95b8695baee986dc54e1b74a91.json  query-c51e380b41e7e4ef7e776eea75035f4207802f118b5163eb7b7c9661d3faa2a5.json  (+9 more)
angular/: .gitignore  angular.json  tsconfig.json
app/: Main.hs
citadels/: Cargo.toml
citadels/src/: actions.rs  districts.rs  game.rs  game_actions.rs  lib.rs  lobby.rs  museum.rs  random.rs  roles.rs  schema.rs  types.rs
citadels/src/handlers/: build.rs  draft.rs  gather.rs  mod.rs
citadels_api/: Cargo.toml
citadels_api/migrations/: 20250531214616_initial.sql  20250601151402_sessions.sql  20250601152118_unique_username.sql
citadels_api/src/: actions.rs  api.rs  auth.rs  db.rs  errors.rs  lib.rs  main.rs  notifications.rs
citadels_api/src/api/: auth.rs  game.rs  lobby.rs  mod.rs  tags.rs  utils.rs
citadels_api/src/middleware/: mod.rs  sessions.rs
citadels_openapi_spec_gen/: Cargo.toml  build.rs  districts.json
citadels_server/: Cargo.toml
crates/citadels_api/: Cargo.toml  README.md
crates/citadels_api/src/: auth.rs  errors.rs  lib.rs  main.rs  notifications.rs
crates/citadels_api/src/api/: auth.rs  lobby.rs  mod.rs  utils.rs
crates/citadels_api/src/middleware/: sessions.rs
crates/citadels_server/: Cargo.toml
crates/citadels_server/src/: main.rs  templates.rs
crates/citadels_server/src/server/: mod.rs  routes.rs  state.rs  utils.rs  ws.rs
crates/citadels_server/src/templates/: game.rs
crates/citadels_server/src/templates/game/: menu.rs  menus.rs
crates/citadels_server/templates/: base.html
crates/citadels_server/templates/lobby/: index.html
crates/citadels_session_replay/: Cargo.toml
crates/citadels_session_replay/src/: main.rs
deploy/: run.sh  upload-assets.js
design/: lobby.md  profile.md  signin.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
lit/: index.html  package.json  tsconfig.json  vite.config.ts
macros/: Cargo.toml
macros-impl/: Cargo.toml
migrations/: 20250602214616_initial.sql  20250615132733_logs.sql  20250615152549_log_player_name.sql  20250615235003_game_logs.sql  20250618032313_active_game.sql  20250618151114_action_logs.sql  20250618152736_guest_users.sql  20250618171608_sessions.sql  20250618214616_initial.sql
public/: districts.json  index.css  index.html  openapi.json
react/: index.html  tsconfig.json  vite.config.ts
sample/: discord-me.json  oauth.json  signin.json
sample-json/: signin-with-email.json
scripts/: deploy-local.nu  deploy.nu  migrate.nu
src/: actions.rs  districts.rs  game.rs  lib.rs  lobby.rs  logger.rs  main.rs  museum.rs  random.rs  roles.rs  sqlite.rs  strings.rs  templates.rs  types.rs  utils.rs
supabase/: config.toml  (+1 more)
(+199 files in other folders)
