[workspace]
resolver = "2"
members = ["citadels_server", "citadels", "macros", "macros-impl"]

[profile.dev]
debug = 0

[workspace.dependencies]
sqlx-postgres = { version = "0.8", default-features = false, features = [
  "json",

] }
sqlx = { version = "0.8", default-features = false, features = [
  "json",
  "postgres",
  "macros",
  "runtime-tokio",
  "tls-native-tls",
] }
