[workspace]
resolver = "2"
members = [
  "citadels",
  "citadels_server",
  "citadels_api",
  "citadels_openapi_spec_gen",
  "macros",
  "macros-impl",
]

[profile.dev]
debug = 0

[workspace.dependencies]
cookie = { version = "0.18.1" }
askama = { version = "0.12.1", default-features = false }
axum = { version = "0.7.2", features = [
  "ws",
  "macros",
], default-features = true }
axum-extra = { version = "0.9.0", features = [
  "cookie-private",
], default-features = false }
futures = { version = "0.3.30", default-features = false }
http = { version = "1.0.0", default-features = false }
rand = { version = "0.8.5", default-features = false }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
log = "0.4.20"
env_logger = { version = "0.10.1", features = ["color"] }
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
getrandom = { version = "*" }
time = "0.3.31"
axum-core = "0.4.3"
serde_with = "3.5.0"
tracing = { version = "0.1.40", default-features = false }
anyhow = { version = "1.0.83", default-features = true }
uuid = { version = "1.8.0", features = ["v4"] }

futures-util = "0.3.30"
poem = { version = "3.1.10", features = ["session", "sse"] }
poem-openapi = { version = "5.1.14", features = [
  "sqlx",
  "static-files",
  "swagger-ui",
] }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1.17"
arcstr = { version = "1.2.0", features = ["serde"], default-features = false }
serde = "1.0.219"
color-eyre = "0.6.5"
dotenvy = { version = "0.15.0" }
sqlx-postgres = { version = "0.8.6", features = ["json"] }
sqlx = { version = "0.8.6", default-features = false, features = [
  "json",
  "macros",
  "runtime-tokio",
  "postgres",
  "tls-rustls",
] }
thiserror = "2.0.12"
argon2 = "0.5.3"
serde_json = "1"
