[workspace]
resolver = "2"
members = [
  "crates/citadels",
  "crates/citadels_server",
  "crates/citadels_api",
  "crates/citadels_openapi_spec_gen",
  "crates/citadels_session_replay",
  "crates/macros",
  "crates/macros-impl",
]

[profile.dev]
debug = 0

[workspace.dependencies]
cookie = { version = "0.18.1" }
askama = { version = "0.12.1", default-features = false }
futures = { version = "0.3.30", default-features = false }
http = { version = "1.0.0", default-features = false }
rand = { version = "0.8.5", default-features = false }
log = "0.4.20"
env_logger = { version = "0.10.1", features = ["color"] }
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
getrandom = { version = "0.3" }
time = "0.3.31"
tracing = { version = "0.1.40", default-features = false }
anyhow = { version = "1.0.83", default-features = true }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

futures-util = "0.3.30"
poem = { version = "3.1.10", features = [
  "session",
  "sse",
  "websocket",
  "eyre06",
  "anyhow",
] }
poem-openapi = { version = "5.1.14", features = [
  "sqlx",
  "static-files",
  "swagger-ui",
  "uuid",
] }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1.17"
arcstr = { version = "1.2.0", features = ["serde"], default-features = false }
serde = { version = "1.0.219", features = [] }
serde_with = "3.5.0"
color-eyre = { version = "0.6.5" }
dotenvy = { version = "0.15.0" }
sqlx-postgres = { version = "0.8.6", features = ["json"] }
sqlx = { version = "0.8.6", default-features = false, features = [
  "json",
  "uuid",
  "macros",
  "runtime-tokio",
  "postgres",
  "tls-rustls",
] }
thiserror = { version = "2.0.12" }
argon2 = { version = "0.5.3" }
serde_json = { version = "1" }
