cabal-version:      2.4
name:               citadels
version:            0.0.0.0
license:            MIT
author:             Charles Taylor
maintainer:         charlestaylor95@gmail.com

extra-source-files:
    LICENSE

executable citadels
    main-is:          Main.hs
    build-depends:
      base ^>= 4.17.2.0,
      blaze-html ^>= 0.9.1.2,
      containers ^>= 0.6.7,
      scotty ^>= 0.21,
      text ^>= 2.0,
      wai-middleware-static ^>=0.9.0,
      wai-extra ^>= 3.1.13.0,

    hs-source-dirs:   app
    default-language: Haskell2010
