cabal-version:      2.4
name:               citadels
version:            0.0.0.0
license:            MIT
author:             Charles Taylor
maintainer:         charlestaylor95@gmail.com

extra-source-files:
    LICENSE

executable citadels
    main-is:          Main.hs
    build-depends:
      base ^>= 4.17.2.0,
      relude ^>= 1.2.1.0,
      blaze-html ^>= 0.9.1.2,
      containers ^>= 0.6.7,
      scotty ^>= 0.21,
      text ^>= 2.0,
      twain ^>= 2.1,
      lucid2 ^>= 0.0.20230706,
      wai ^>= 3.2.4,
      wai-extra ^>= 3.1.13.0,
      wai-middleware-static ^>=0.9.0,
      wai-websockets ^>= 3.0.1.2,
      warp ^>= 3.3.31,
      websockets ^>= 0.12.7.3,

    hs-source-dirs:   app
    default-language: Haskell2010
