cabal-version:      2.4
name:               citadels
version:            0.0.0.0
license:            MIT
author:             Charles Taylor
maintainer:         charlestaylor95@gmail.com
extra-source-files: LICENSE


common common
  build-depends:    
    base ^>= 4.17.2.0,
    relude ^>= 1.2.1.0,
    containers ^>= 0.6.7,
    text ^>= 2.0,
    lucid2 ^>= 0.0.20230706,
    twain ^>= 2.1,
    wai ^>= 3.2.4,
    wai-extra ^>= 3.1.13.0,
    wai-middleware-static ^>=0.9.0,
    wai-websockets ^>= 3.0.1.2,
    warp ^>= 3.3.30,
    websockets ^>= 0.12.7.3,
    concurrent-hashtable ^>= 0.1.8,
    stm ^>= 2.5.3.0,
    cookie ^>= 0.4.6,
    data-default,
    -- clientsession ^>= 0.9.2.0,
    uuid ^>= 1.3.15,

  ghc-options:
    -Wno-ambiguous-fields
    -Wno-partial-type-signatures

  default-language: 
    Haskell2010
  default-extensions:
    NoImplicitPrelude, 
    OverloadedStrings, 
    OverloadedLabels,
    ImportQualifiedPost, 
    ScopedTypeVariables,
    NumericUnderscores,
    DerivingStrategies,
    BlockArguments,
    NoFieldSelectors,
    DuplicateRecordFields,
    GeneralizedNewtypeDeriving,
    DeriveGeneric,
    NamedFieldPuns,
    OverloadedRecordDot,
    PartialTypeSignatures


executable citadels-server
  import:           common
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    citadels-lib

library citadels-lib
  import:           common
  hs-source-dirs:   lib
  exposed-modules:
    Citadels.Server.Main,
    Citadels.Types,
    Citadels.Server.State,
    Citadels.Pages.Lobby,
    Citadels.Prelude,
    Citadels.Templates,
    Lucid.Htmx,
    Lucid.Extra
