[package]
name = "citadels"
edition = "2024"


[dependencies]
rand = { version = "0.8.5" }
log = "0.4.20"
env_logger = { version = "0.10.1", features = ["color"] }
rand_xoshiro = "0.6.0"

rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.195", features = ["derive", "rc"] }
serde_json = "1.0.111"
time = "0.3.31"
tracing = { version = "0.1.40", default-features = false }
macros = { path = "../macros" }
arcstr = { version = "1.2.0", features = ["serde"], default-features = false }
uuid = { version = "1.8.0", features = ["v4"] }
thiserror = "1.0.61"
poem-openapi = "5.1.14"
color-eyre = "0.6.5"
