[package]
name = "citadels"
edition = "2021"

[dependencies]
macros = { path = "../macros" }
rand = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rand_xoshiro = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
