[package]
name = "citadels_api"
version = "0.1.0"
edition = "2024"

[dependencies]
citadels = { path = "../citadels" }
citadels_server = { path = "../citadels_server" }
cookie = { workspace = true }
hyper = { workspace = true }
futures-util = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
arcstr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true, optional = true }
sqlx = { workspace = true }
sqlx-postgres = { workspace = true }
thiserror = { workspace = true }
color-eyre = { workspace = true }
argon2 = { workspace = true }

[features]
dotenv = ["dep:dotenvy"]
