[package]
name = "citadels_server"
edition = "2021"


[dependencies]
citadels = { path = "../citadels/" }
askama = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rand_xoshiro = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
dotenvy = { workspace = true, optional = true }
axum-core = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true }
anyhow = { version = "1.0.83", default-features = true }
uuid = { version = "1.8.0", features = ["v4"] }
sqlx = { workspace = true }
sqlx-postgres = { workspace = true }

[features]
dev = []
dotenv = ["dep:dotenvy"]
