[package]
name = "citadels_server"
edition = "2021"


[dependencies]
citadels = { path = "../citadels/" }
cookie = { workspace = true }
futures-util = { workspace = true }
poem = { workspace = true }
askama = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rand_xoshiro = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
dotenvy = { workspace = true, optional = true }
serde_with = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
sqlx-postgres = { workspace = true }
hyper = { workspace = true }
