[package]
name = "citadels_session_replay"
edition = "2024"


[dependencies]
citadels = { path = "../citadels/" }
futures = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
rand_xoshiro = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
sqlx-postgres = { workspace = true }
